--- a/client/src/views/Home/Home.css
+++ b/client/src/views/Home/Home.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
+    font-family: 'Bellota', cursive;
 }
+@import url('https://fonts.googleapis.com/css?family=Bellota');
 
 .Landing-header{
     text-align: center;
