add style.js and organizing some code

--- a/client/src/views/main.css
+++ b/client/src/views/main.css
@@ -1,4 +1,12 @@
 body {
     margin: 0;
 }
-
+.backgroundStyles  {
+    minHeight: 100% ;
+    minWidth: 1024px ;
+    width: 100% ;
+    height: auto ;
+    position: fixed ;
+    top: 0 ;
+    left: 0 ;
+}
